
{{{ Bug Fixes

- Re-add missing help viewer back and forward icons (Björn "Vampire" Kautler)

- Fix wrong behavior of input method framework support that returned wrong
  locations for offsets and wrong offsets for locations
  (#4082 - Björn "Vampire" Kautler)

- Upgrade OS X launcher stub to be compatible with newer Java versions
  (#4077 - Björn "Vampire" Kautler)

- Fix Untitled Issue with -background command line option
  (Patch #617 - Hrotkó Gábor)

- Handle case where user has not set either a backup prefix or suffix
  (#4069 - Dale Anson)

- Fix odd default colors for style editor (#4055 - Dale Anson)

- Fix NullPointerException in Preview Javadoc macro (#2412 - Dale Anson)

- Fix dockable buttons not wrapping correctly (#2626 - Dale Anson)

- Fix electric scroll not working with page up/down (#2719 - Dale Anson)

- Correct location of context menu popup (#4073 - Dale Anson)

- Fix file browser splitter buttons not working (#4081 - Dale Anson)

}}}
{{{ Miscellaneous

- The Windows EXE launcher now considers JAVA_HOME environment variable if no
  matching Java is found in the registry (Björn "Vampire" Kautler)

- The Windows installer now uses modern and resizable style and allows
  installation without administrator privileges (Björn "Vampire" Kautler)

- Chinese Taiwan localization from David Day (Patch #620 - Dale Anson)

- Fix all deprecation warnings produced when compiling with Java 9 (Dale Anson)

- Adjust Appearance option pane to allow setting "primary" and "secondary" fonts
  for all look and feels (Dale Anson)

}}}
{{{ API Changes

- New method IntegerArray.isEmpty() (Matthieu Casanova)

}}}
{{{ Editing

- Update Java mode to support Java 10 "var" type. (Dale Anson)

- Add PlantUML mode (Andreas Studer / Dale Anson)

- Add HL7 mode (Thiemo Kellner / Dale Anson)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: